[package]
name = "fluent-comparisons"
version = "0.1.0"
authors = ["geo-ant <54497890+geo-ant@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/geo-ant/fluent-comparisons"
repository = "https://github.com/geo-ant/fluent-comparisons"
categories = ["algorithms", "development tools"]
description = "Boost code legibility by writing comparison expressions like `if any_of!({a,b,c}>=5) {...}` while keeping the benefits as hand-written code, such as lazy evaluation and boolean short-circuiting."
readme = "README.md"
keywords = ["fluent","DRY","multi","comparison","expressions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We can specify a local path dependency as well as a version. If building locally, the local path will
# be used, but on crates.io the version dependency will be used, which is just extremely helpful for development.
# See this Reddit post: https://www.reddit.com/r/rust/comments/a39er8/how_do_you_publish_your_cargo_workspace_packages/
# And the Rust Doc: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#specifying-path-dependencies
fluent-comparisons-macros = {version = "0.1.0", path = "fluent-comparisons-macros"}

[workspace]
members = ["fluent-comparisons-macros"]

[dev-dependencies]
rand = "0.8"