[package]
name = "fluent-comparisons"
version = "1.0.2"
authors = ["geo-ant <geos.blog@posteo.de>"]
edition = "2021"
homepage = "https://github.com/geo-ant/fluent-comparisons"
repository = "https://github.com/geo-ant/fluent-comparisons"
categories = ["algorithms", "development tools"]
description = "Boost readability by writing multicomparison expressions like `if any_of!({a,b,c}>=5) {...}` while keeping the benefits of hand-written code."
readme = "README.md"
license = "MIT"
keywords = ["fluent", "DRY", "multi", "comparison", "expressions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We can specify a local path dependency as well as a version. If building locally, the local path will
# be used, but on crates.io the version dependency will be used, which is just extremely helpful for development.
# See this Reddit post: https://www.reddit.com/r/rust/comments/a39er8/how_do_you_publish_your_cargo_workspace_packages/
# And the Rust Doc: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#specifying-path-dependencies
fluent-comparisons-macros = { version = "1.0.0", path = "fluent-comparisons-macros" }

[workspace]
members = ["fluent-comparisons-macros"]

[dev-dependencies]
rand = "0.8"
macrotest = "1.0"
