[package]
name = "fluent-comparisons-macros"
version = "0.3.0"
authors = ["geo-ant <geos.blog@posteo.de>"]
edition = "2018"
homepage = "https://github.com/geo-ant/fluent-comparisons"
repository = "https://github.com/geo-ant/fluent-comparisons"
description = "Macros for the fluent-comparisons crate."
categories = ["algorithms", "development tools"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8"
